{
    "name": "InputControll",
    "maps": [
        {
            "name": "Touch",
            "id": "5c43245d-6a67-4768-bd8f-3c12d6bc8e0b",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "0cfae4f4-ce88-4962-a98e-2338fbcfef30",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "6ffaf77b-da95-4482-856a-5ebf3dd3fb5b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TwoContact",
                    "type": "PassThrough",
                    "id": "4da83382-64d0-4e8d-903e-417ae6f1b9df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TwoPosition",
                    "type": "PassThrough",
                    "id": "0e2b12ec-4061-4829-8b69-25c14ba7d48b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Scroll",
                    "type": "Value",
                    "id": "00a5c38b-719c-44d4-a198-f5dbbf7ff4a9",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PrimaryDelta",
                    "type": "PassThrough",
                    "id": "29b52e65-d190-4b1a-b869-006d3aca3cbf",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TwoDelta",
                    "type": "PassThrough",
                    "id": "7f516526-437b-4325-9ceb-6d3cad7a67d8",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "187555dd-9b69-4515-8d9f-bd01cfc14270",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Touch",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c92cb27-7930-474a-86bf-45db5152aa1a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8b8a81aa-67fb-4bf9-84ac-bbb366674627",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76a9b220-8cff-4aa1-9f46-5ee4952bf8e1",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99ee40f4-dfae-4151-b24f-4cd43d2d7d71",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TwoContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0373bf4-63ed-43bc-8286-74021434a556",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TwoPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27ce77e7-7c29-483c-bf84-84b97451cf6c",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse",
                    "action": "Scroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5539eaf4-c094-4f99-aa84-ada1646bdeae",
                    "path": "<Touchscreen>/primaryTouch/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "PrimaryDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d650cfba-1d6b-4dd5-a78f-21d388363fa9",
                    "path": "<Touchscreen>/touch1/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touch",
                    "action": "TwoDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Touch",
            "bindingGroup": "Touch",
            "devices": []
        },
        {
            "name": "Mouse",
            "bindingGroup": "Mouse",
            "devices": []
        }
    ]
}